# TelethonControllerBot

./: .env  .gitignore  README.md  pyproject.toml
telethoncontrollerbot/: loader.py  main.py
telethoncontrollerbot/apps/bot/filters/: main_menu_filters.py  payment_filters.py  triggers_filters.py
telethoncontrollerbot/apps/bot/handlers/: admin_panel.py  configure_triggers.py  connect_account.py  main_menu.py  make_subscription.py  subscription_settings.py
telethoncontrollerbot/apps/bot/handlers/admin_handlers/: admin_panel.py  subscription_settings.py
telethoncontrollerbot/apps/bot/markups/: admin_menu.py  main_menu.py  subscribe_menu.py  trigger_menu.py
telethoncontrollerbot/apps/bot/middleware/: father_middleware.py
telethoncontrollerbot/apps/bot/payments/: payment_processes.py  yookassa_async.py  yookassa_utils.py
telethoncontrollerbot/apps/bot/utils/: daily_processes.py  subscription_info.py
telethoncontrollerbot/apps/controller/: controller.py  controller_data.py  jeraldo_me_1985947355_session.session  main.py  session_data.py  settings.py  triggers_data.py
telethoncontrollerbot/config/: config.py
telethoncontrollerbot/db/: db_main.py  models.py
tests/: test_telethoncontrollerbot.py
